--- a/public/m/less/index.less
+++ b/public/m/less/index.less
@@ -13,17 +13,15 @@ a {
 i {
     font-style: none;
 }
-body{
-    
-    background-color: yellow;
-    padding-top: 45px;
+body {
+    background-color: #fff;
 }
-
 @myColor:#006699;
 #header {
     top: 0;
     left: 0;
     height: 45px;
+    z-index: 999;
     position: fixed;
     width: 100%;
     background-color: @myColor;
@@ -45,5 +43,85 @@ body{
     img {
         width: 100%;
     
+    }
+}
+#main {
+    padding-top: 45px;
+    padding-bottom: 45px;
+}
+#nav {
+    padding: 10px;
+    a {
+        img {
+            width: 100%;
+        }
+    }
+}
+#banner{
+    padding: 0 10px;
+    a {
+        display: block;
+        img {
+            width: 100%;
+        }
+    }
+}
+#brand {
+    padding: 0 10px;
+    
+    >img {
+        width: 100%;
+    }
+    a {
+        display: block;
+        img {
+            width: 100%;
+        }
+    }
+}
+#sport,#women,#man {
+    padding: 0 10px;
+    img {
+        width: 100%;
+    }
+    a {
+        display: block;
+    }
+    >.mui-row {
+        padding: 10px;
+        .nbu {
+            padding: 10px;
+            a {
+                    padding-bottom: 5px;
+                    box-shadow: 0 0 10px #ccc;
+                    text-align: center;    
+            }
+        }
+    }
+}
+#footer {
+    height: 45px;
+    background-color: @myColor;
+    width: 100%;
+    z-index: 999;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding-top: 8px;
+    a {
+        height: 100%;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px;
+        &.active {
+            color: orange;
+        }
+        span {
+            margin-top: 5px;
+            font-size: 12px;
+        }
     }
 }
