2018-6-10 完成搜索界面

--- a/public/m/less/base.less
+++ b/public/m/less/base.less
@@ -87,4 +87,38 @@ body {
 #main {
     padding-top: 45px;
     padding-bottom: 45px;
+    .title{
+        padding: 10px;
+        padding-right: 60px;
+        position: relative;
+        .input-search {
+            height: 34px;
+            margin: 0;
+        }
+        .btn-search {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+        }
+    }
+}
+.content {
+    padding: 0 10px;
+        img {
+            width: 100%;
+        }
+        a {
+            display: block;
+        }
+        >.mui-row {
+            padding: 10px;
+            .nbu {
+                padding: 10px;
+                a {
+                        padding-bottom: 5px;
+                        box-shadow: 0 0 10px #ccc;
+                        text-align: center;    
+                }
+            }
+        }
 }
