2018-6-14完成移动页面

--- a/public/m/less/base.less
+++ b/public/m/less/base.less
@@ -48,7 +48,7 @@ body {
             text-align: left;
         }
     }
-    .fa-search,.fa-home {
+    .fa-search,.fa-home,.fa-refresh {
         position: absolute;
         right: 15px;
         font-size: 18px;
